user recovery emails
reformatted the emails and updated inactive tokens